expanded.rs

#[automatically_derived]
impl ::core::marker::Copy for JanetFuncEnv__bindgen_ty_1 {}
#[automatically_derived]
impl ::core::clone::Clone for JanetFuncEnv__bindgen_ty_1 {
    #[inline]
    fn clone(&self) -> JanetFuncEnv__bindgen_ty_1 {
        let _: ::core::clone::AssertParamIsCopy<Self>;
        *self
    }
}
#[repr(C)]
pub struct JanetFunction {
    pub gc: JanetGCObject,
    pub def: *mut JanetFuncDef,
    pub envs: __IncompleteArrayField<*mut JanetFuncEnv>,
}
#[repr(C)]
pub struct JanetParseState {
    _unused: [u8; 0],
}
#[automatically_derived]
impl ::core::fmt::Debug for JanetParseState {
    fn fmt(&self, f: &mut ::core::fmt::Formatter) -> ::core::fmt::Result {
        ::core::fmt::Formatter::debug_struct_field1_finish(
            f,
            "JanetParseState",
            "_unused",
            &&self._unused,
        )
    }
}
#[automatically_derived]
impl ::core::marker::Copy for JanetParseState {}
#[automatically_derived]
impl ::core::clone::Clone for JanetParseState {
    #[inline]
    fn clone(&self) -> JanetParseState {
        let _: ::core::clone::AssertParamIsClone<[u8; 0]>;
        *self
    }
}
pub const JanetParserStatus_JANET_PARSE_ROOT: JanetParserStatus = 0;
pub const JanetParserStatus_JANET_PARSE_ERROR: JanetParserStatus = 1;
pub const JanetParserStatus_JANET_PARSE_PENDING: JanetParserStatus = 2;
pub const JanetParserStatus_JANET_PARSE_DEAD: JanetParserStatus = 3;
pub type JanetParserStatus = ::libc::c_uint;
#[repr(C)]
pub struct JanetParser {
    pub args: *mut Janet,
    pub error: *const ::libc::c_char,
    pub states: *mut JanetParseState,
    pub buf: *mut u8,
    pub argcount: usize,
    pub argcap: usize,
    pub statecount: usize,
    pub statecap: usize,
    pub bufcount: usize,
    pub bufcap: usize,
    pub line: usize,
    pub column: usize,
    pub pending: usize,
    pub lookback: ::libc::c_int,
    pub flag: ::libc::c_int,
}
#[automatically_derived]
impl ::core::fmt::Debug for JanetParser {
    fn fmt(&self, f: &mut ::core::fmt::Formatter) -> ::core::fmt::Result {
        let names: &'static _ = &[
            "args",
            "error",
            "states",
            "buf",
            "argcount",
            "argcap",
            "statecount",
            "statecap",
            "bufcount",
            "bufcap",
            "line",
            "column",
            "pending",
            "lookback",
            "flag",
        ];
        let values: &[&dyn ::core::fmt::Debug] = &[
            &&self.args,
            &&self.error,
            &&self.states,
            &&self.buf,
            &&self.argcount,
            &&self.argcap,
            &&self.statecount,
            &&self.statecap,
            &&self.bufcount,
            &&self.bufcap,
            &&self.line,
            &&self.column,
            &&self.pending,
            &&self.lookback,
            &&self.flag,
        ];
        ::core::fmt::Formatter::debug_struct_fields_finish(
            f,
            "JanetParser",
            names,
            values,
        )
    }
}
#[automatically_derived]
impl ::core::marker::Copy for JanetParser {}
#[automatically_derived]
impl ::core::clone::Clone for JanetParser {
    #[inline]
    fn clone(&self) -> JanetParser {
        let _: ::core::clone::AssertParamIsClone<*mut Janet>;
        let _: ::core::clone::AssertParamIsClone<*const ::libc::c_char>;
        let _: ::core::clone::AssertParamIsClone<*mut JanetParseState>;
        let _: ::core::clone::AssertParamIsClone<*mut u8>;
        let _: ::core::clone::AssertParamIsClone<usize>;
        let _: ::core::clone::AssertParamIsClone<::libc::c_int>;
        let _: ::core::clone::AssertParamIsClone<::libc::c_int>;
        *self
    }
}
#[repr(C)]
pub struct JanetMarshalContext {
    pub m_state: *mut ::libc::c_void,
    pub u_state: *mut ::libc::c_void,
    pub flags: ::libc::c_int,
    pub data: *const u8,
    pub at: *const JanetAbstractType,
}
#[automatically_derived]
impl ::core::fmt::Debug for JanetMarshalContext {
    fn fmt(&self, f: &mut ::core::fmt::Formatter) -> ::core::fmt::Result {
        ::core::fmt::Formatter::debug_struct_field5_finish(
            f,
            "JanetMarshalContext",
            "m_state",
            &&self.m_state,
            "u_state",
            &&self.u_state,
            "flags",
            &&self.flags,
            "data",
            &&self.data,
            "at",
            &&self.at,
        )
    }
}
#[automatically_derived]
impl ::core::marker::Copy for JanetMarshalContext {}
#[automatically_derived]
impl ::core::clone::Clone for JanetMarshalContext {
    #[inline]
    fn clone(&self) -> JanetMarshalContext {
        let _: ::core::clone::AssertParamIsClone<*mut ::libc::c_void>;
        let _: ::core::clone::AssertParamIsClone<*mut ::libc::c_void>;
        let _: ::core::clone::AssertParamIsClone<::libc::c_int>;
        let _: ::core::clone::AssertParamIsClone<*const u8>;
        let _: ::core::clone::AssertParamIsClone<*const JanetAbstractType>;
        *self
    }
}
#[repr(C)]
pub struct JanetAbstractType {
    pub name: *const ::libc::c_char,
    pub gc: ::core::option::Option<
        unsafe extern "C" fn(data: *mut ::libc::c_void, len: usize) -> ::libc::c_int,
    >,
    pub gcmark: ::core::option::Option<
        unsafe extern "C" fn(data: *mut ::libc::c_void, len: usize) -> ::libc::c_int,
    >,
    pub get: ::core::option::Option<
        unsafe extern "C" fn(
            data: *mut ::libc::c_void,
            key: Janet,
            out: *mut Janet,
        ) -> ::libc::c_int,
    >,
    pub put: ::core::option::Option<
        unsafe extern "C" fn(data: *mut ::libc::c_void, key: Janet, value: Janet),
    >,
    pub marshal: ::core::option::Option<
        unsafe extern "C" fn(p: *mut ::libc::c_void, ctx: *mut JanetMarshalContext),
    >,
    pub unmarshal: ::core::option::Option<
        unsafe extern "C" fn(ctx: *mut JanetMarshalContext) -> *mut ::libc::c_void,
    >,
    pub tostring: ::core::option::Option<
        unsafe extern "C" fn(p: *mut ::libc::c_void, buffer: *mut JanetBuffer),
    >,
    pub compare: ::core::option::Option<
        unsafe extern "C" fn(
            lhs: *mut ::libc::c_void,
            rhs: *mut ::libc::c_void,
        ) -> ::libc::c_int,
    >,
    pub hash: ::core::option::Option<
        unsafe extern "C" fn(p: *mut ::libc::c_void, len: usize) -> i32,
    >,
    pub next: ::core::option::Option<
        unsafe extern "C" fn(p: *mut ::libc::c_void, key: Janet) -> Janet,
    >,
    pub call: ::core::option::Option<
        unsafe extern "C" fn(
            p: *mut ::libc::c_void,
            argc: i32,
            argv: *mut Janet,
        ) -> Janet,
    >,
}
#[automatically_derived]
impl ::core::fmt::Debug for JanetAbstractType {
    fn fmt(&self, f: &mut ::core::fmt::Formatter) -> ::core::fmt::Result {
        let names: &'static _ = &[
            "name",
            "gc",
            "gcmark",
            "get",
            "put",
            "marshal",
            "unmarshal",
            "tostring",
            "compare",
            "hash",
            "next",
            "call",
        ];
        let values: &[&dyn ::core::fmt::Debug] = &[
            &&self.name,
            &&self.gc,
            &&self.gcmark,
            &&self.get,
            &&self.put,
            &&self.marshal,
            &&self.unmarshal,
            &&self.tostring,
            &&self.compare,
            &&self.hash,
            &&self.next,
            &&self.call,
        ];
        ::core::fmt::Formatter::debug_struct_fields_finish(
            f,
            "JanetAbstractType",
            names,
            values,
        )
    }
}
#[automatically_derived]
impl ::core::marker::Copy for JanetAbstractType {}
#[automatically_derived]
impl ::core::clone::Clone for JanetAbstractType {
    #[inline]
    fn clone(&self) -> JanetAbstractType {
        let _: ::core::clone::AssertParamIsClone<*const ::libc::c_char>;
        let _: ::core::clone::AssertParamIsClone<
            ::core::option::Option<
                unsafe extern "C" fn(
                    data: *mut ::libc::c_void,
                    len: usize,
                ) -> ::libc::c_int,
            >,
        >;
        let _: ::core::clone::AssertParamIsClone<
            ::core::option::Option<
                unsafe extern "C" fn(
                    data: *mut ::libc::c_void,
                    len: usize,
                ) -> ::libc::c_int,
            >,
        >;
        let _: ::core::clone::AssertParamIsClone<
            ::core::option::Option<
                unsafe extern "C" fn(
                    data: *mut ::libc::c_void,
                    key: Janet,
                    out: *mut Janet,
                ) -> ::libc::c_int,
            >,
        >;
        let _: ::core::clone::AssertParamIsClone<
            ::core::option::Option<
                unsafe extern "C" fn(data: *mut ::libc::c_void, key: Janet, value: Janet),
            >,
        >;
        let _: ::core::clone::AssertParamIsClone<
            ::core::option::Option<
                unsafe extern "C" fn(
                    p: *mut ::libc::c_void,
                    ctx: *mut JanetMarshalContext,
                ),
            >,
        >;
        let _: ::core::clone::AssertParamIsClone<
            ::core::option::Option<
                unsafe extern "C" fn(
                    ctx: *mut JanetMarshalContext,
                ) -> *mut ::libc::c_void,
            >,
        >;
        let _: ::core::clone::AssertParamIsClone<
            ::core::option::Option<
                unsafe extern "C" fn(p: *mut ::libc::c_void, buffer: *mut JanetBuffer),
            >,
        >;
        let _: ::core::clone::AssertParamIsClone<
            ::core::option::Option<
                unsafe extern "C" fn(
                    lhs: *mut ::libc::c_void,
                    rhs: *mut ::libc::c_void,
                ) -> ::libc::c_int,
            >,
        >;
        let _: ::core::clone::AssertParamIsClone<
            ::core::option::Option<
                unsafe extern "C" fn(p: *mut ::libc::c_void, len: usize) -> i32,
            >,
        >;
        let _: ::core::clone::AssertParamIsClone<
            ::core::option::Option<
                unsafe extern "C" fn(p: *mut ::libc::c_void, key: Janet) -> Janet,
            >,
        >;
        let _: ::core::clone::AssertParamIsClone<
            ::core::option::Option<
                unsafe extern "C" fn(
                    p: *mut ::libc::c_void,
                    argc: i32,
                    argv: *mut Janet,
                ) -> Janet,
            >,
        >;
        *self
    }
}
#[repr(C)]
pub struct JanetReg {
    pub name: *const ::libc::c_char,
    pub cfun: JanetCFunction,
    pub documentation: *const ::libc::c_char,
}
#[automatically_derived]
impl ::core::fmt::Debug for JanetReg {
    fn fmt(&self, f: &mut ::core::fmt::Formatter) -> ::core::fmt::Result {
        ::core::fmt::Formatter::debug_struct_field3_finish(
            f,
            "JanetReg",
            "name",
            &&self.name,
            "cfun",
            &&self.cfun,
            "documentation",
            &&self.documentation,
        )
    }
}
#[automatically_derived]
impl ::core::marker::Copy for JanetReg {}
#[automatically_derived]
impl ::core::clone::Clone for JanetReg {
    #[inline]
    fn clone(&self) -> JanetReg {
        let _: ::core::clone::AssertParamIsClone<*const ::libc::c_char>;
        let _: ::core::clone::AssertParamIsClone<JanetCFunction>;
        let _: ::core::clone::AssertParamIsClone<*const ::libc::c_char>;
        *self
    }
}
#[repr(C)]
pub struct JanetRegExt {
    pub name: *const ::libc::c_char,
    pub cfun: JanetCFunction,
    pub documentation: *const ::libc::c_char,
    pub source_file: *const ::libc::c_char,
    pub source_line: i32,
}
